# home-assistant-gazpar

./: CHANGELOG.md  LICENSE  LICENSE.md  README.md  gitversion.yaml  hacs.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yaml  create-release.yaml  hacs-action.yml
.github/workflows/compute-version/: action.yaml
.github/workflows/git-tag/: action.yaml
.github/workflows/python-lint/: action.yaml
.github/workflows/python-test/: action.yaml
custom_components/gazpar/: enum.py  manifest.json  manifest.py  sensor.py  util.py
tests/: test_gazpar_sensor.py
tests/resources/: high_daily_data.json  low_daily_data.json  zero_daily_data.json
